# pylyskom

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  README.rst  aux-items.txt  kom.py  make_komauxitems  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
e2e/: Dockerfile.lyskom-server  conftest.py  docker-compose.yml  run.sh  test_async.py  test_sync.py
pylyskom/: aio.py  async.py  asyncmsg.py  cachedconnection.py  connection.py  datatypes.py  errors.py  kom.py  komauxitems.py  komsession.py  protocol.py  request.py  requests.py  stats.py  utils.py  version.py
pylyskom/tests/: test_cachedconnection.py  test_kom.py
tests/: conftest.py  mocks.py  test_cachedconnection.py  test_connection.py  test_datatypes.py  test_kom.py  test_komsession.py  test_protocol.py  test_requests.py  test_utils.py
tests/smoketests/: test_aio.py  test_smoke.py  test_smoke_aio.py
